# rust-interning

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  lints.yml
src/: compare.rs  intern.rs  main.rs  schema.rs  size.rs
src/schema/: mod.rs  optimized.rs  source.rs
