[package]
name = "rust-interning"
description = "Demo of interning in Rust applied to RATP's disruptions API"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Guillaume Endignoux <ggendx@gmail.com>"]
repository = "https://github.com/gendx/rust-interning"
readme = "README.md"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.10.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
uuid = { version = "1.13.1", features = ["serde"] }
