[package]
name = "rust-interning"
description = "Demo of interning in Rust applied to RATP's disruptions API"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Guillaume Endignoux <ggendx@gmail.com>"]
repository = "https://github.com/gendx/rust-interning"
readme = "README.md"

[dependencies]
appendvec = "0.1.0"
bincode = "1.3.3"
chrono = "0.4.42"
chrono-tz = "0.10.4"
ciborium = "0.2.2"
hashbrown = "0.16.1"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_tuple = "1.1.3"
uuid = { version = "1.19.0", features = ["serde"] }
