[package]
name = "rust-interning"
description = "Demo of interning in Rust applied to RATP's disruptions API"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Guillaume Endignoux <ggendx@gmail.com>"]
repository = "https://github.com/gendx/rust-interning"
readme = "README.md"

[dependencies]
bincode = "1.3.3"
blazinterner = { version = "0.1.2", features = ["debug", "get-size2", "raw", "serde"] }
chrono = "0.4.42"
chrono-tz = "0.10.4"
ciborium = "0.2.2"
get-size2 = { version = "0.7.4", features = ["derive"] }
hashbrown = "0.16.1"
jinterner = { version = "0.2.0", features = ["debug", "get-size2", "serde"] }
paralight = { version = "0.0.10", default-features = false, features = ["rayon"] }
postcard = { version = "1.1.3", features = ["use-std"] }
rayon-core = "1.13.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_tuple = "1.1.3"
uuid = { version = "1.19.0", features = ["serde"] }
